--- a/portofolio/_config.yml
+++ b/portofolio/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: "keiz44l"
 bye_message: "Thx!"
-baseurl: "https://keiz44l.github.io/"
-url: "https://keiz44l.github.io"
+baseurl: "/"
+url: "/"
 disqus: keiz44l
 
 # Header settings
