--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "keiz44l"
 bye_message: "Thx!"
-baseurl: "/portofolio"  # Change this if it's a project site
+baseurl: "/"  # Change this if it's a project site
 url: "https://keiz44l.github.io"
 disqus: keiz44l
 
